--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                         <p class="drop-menu__text">Нажимая “отправить”, вы даете согласие на <span>обработку персональных данных</span> и
                              соглашаетесь с нашей <span>политикойконфиденциальности</span></p>
                         <button class="button-order" form="user-number">
-                            <span class="button-order__text">Заказать</span>
+                            <span class="button-order__text">Отправить</span>
                             <span class="button-order__arrow"></span>
                         </button>
                     </div>
@@ -99,7 +99,7 @@
                         <p class="drop-menu__text">Нажимая “отправить”, вы даете согласие на <span>обработку персональных данных</span> и
                              соглашаетесь с нашей <span>политикойконфиденциальности</span></p>
                         <button class="button-order" form="feedback-form">
-                            <span class="button-order__text">Заказать</span>
+                            <span class="button-order__text">Отправить</span>
                             <span class="button-order__arrow"></span>
                         </button>
                     </div>
